Post-v3.2.0
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading
       from older version is supported but it may trigger more leader elections
       during the process, and error logs complaining unrecognized fields may
       be observed on old nodes.
   - OpenFlow:
     * NXT_CT_FLUSH extension is updated to support flushing connections
       based on mark and labels.  'ct-flush' command of ovs-ofctl updated
       to support these new arguments accordingly.
   - ovs-appctl:
     * 'ofproto/trace' now reports OpenFlow rules that make up a conjunctive
       flow match.
     * Output of 'dpctl/show' command no longer shows interface configuration
       status, only values of the actual configuration options, a.k.a.
       'requested' configuration.  The interface configuration status,
       a.k.a. 'configured' values, can be found in the 'status' column of
       the Interface table, i.e. with 'ovs-vsctl get interface <..> status'.
       Reported names adjusted accordingly.
     * Added support for removal of default CT zone limit, e.g.
       "ovs-appctl dpctl/ct-del-limits default".
     * 'dpctl/flush-conntrack' is now capable of flushing connections based
       on mark and labels.
   - ovs-vsctl:
     * New commands 'set-zone-limit', 'del-zone-limit' and 'list-zone-limits'
       to manage the maximum number of connections in conntrack zones via
       a new 'limit' column in the 'CT_Zone' database table and
       'ct_zone_default_limit' column in the 'Datapath' table.
   - Userspace datapath:
     * Added support for Generic Segmentation Offloading for the cases where
       TSO is enabled but not supported by an egress interface (except for
       tunnel interfaces).
     * 'pmd-sleep-max' is updated to also accept pmd-thread-core:sleep-max.
       The existing behaviour is maintained and a non key:value pair value